--- a/CatCommander/CatCommander.csproj
+++ b/CatCommander/CatCommander.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="Semi.Avalonia.TreeDataGrid" Version="11.0.10.4" />
     <PackageReference Include="NLog" Version="5.3.4" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
+    <PackageReference Include="ReactiveUI" Version="20.1.63" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.7" />
   </ItemGroup>
 
   <ItemGroup>
