--- a/CatCommander/CatCommander.csproj
+++ b/CatCommander/CatCommander.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5" />
     <PackageReference Include="ReactiveUI" Version="22.1.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.7" />
+    <PackageReference Include="Tomlyn" Version="0.19.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +41,9 @@
     <None Update="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="config.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -47,9 +51,5 @@
       <DependentUpon>ItemsBrowser.axaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
