--- a/.gitignore
+++ b/.gitignore
@@ -397,12 +397,7 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+.vscode/
 
 # Local History for Visual Studio Code
 .history/
@@ -424,3 +419,5 @@ FodyWeavers.xsd
 # 7zip build
 _o/
 o/
+build/
+
