--- a/CatCommander/NLog.config
+++ b/CatCommander/NLog.config
@@ -10,7 +10,7 @@
         <!-- Console target -->
         <target name="console"
                 type="ColoredConsole"
-                layout="${longdate},${processtime},[${threadid}],${level},${logger},${callsite-linenumber},${message} ${exception:format=tostring}">
+                layout="${longdate},${processtime},[${threadid}],${level},${logger}:${callsite-linenumber},${message} ${exception:format=tostring}">
             <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
             <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
             <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White"/>
@@ -19,7 +19,7 @@
         <!-- File target -->
         <target name="file"
                 type="File"
-                layout="${longdate},${processtime},[${threadid}],${level},${logger},${callsite-linenumber},${message} ${exception:format=tostring}"
+                layout="${longdate},${processtime},[${threadid}],${level},${logger}:${callsite-linenumber},${message} ${exception:format=tostring}"
                 fileName="${logDirectory}/catcommander.log"
                 archiveFileName="${logDirectory}/catcommander.{#}.log"
                 archiveEvery="Day"
