--- a/7z.net/7z.net.csproj
+++ b/7z.net/7z.net.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Update="lib\7z.dll">
+      <None Update="lib\7z.*">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
