--- a/CatCommander/CatCommander.csproj
+++ b/CatCommander/CatCommander.csproj
@@ -31,6 +31,7 @@
         <PackageReference Include="ReactiveUI" Version="22.1.1"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.7"/>
         <PackageReference Include="SharpCompress" Version="0.41.0" />
+        <PackageReference Include="System.Drawing.Common" Version="9.0.0"/>
         <PackageReference Include="Tomlyn" Version="0.19.0"/>
     </ItemGroup>
 
