--- a/libcat/libcat.csproj
+++ b/libcat/libcat.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Avalonia" Version="11.3.7"/>
         <PackageReference Include="NLog" Version="6.0.5"/>
         <PackageReference Include="System.Drawing.Common" Version="9.0.0"/>
+        <PackageReference Include="SharpCompress" Version="0.41.0" />
     </ItemGroup>
 
 </Project>
