add command manager

--- a/CatCommander/CatCommander.csproj
+++ b/CatCommander/CatCommander.csproj
@@ -54,7 +54,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Update="UI\ItemsBrowser.axaml.cs">
+        <Compile Update="View\ItemsBrowser.axaml.cs">
             <DependentUpon>ItemsBrowser.axaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
