key press detection

--- a/CatCommander/CatCommander.csproj
+++ b/CatCommander/CatCommander.csproj
@@ -36,6 +36,7 @@
 
     <ItemGroup>
         <AvaloniaResource Include="Images\*.png"/>
+        <AvaloniaResource Include="Assets\*.png"/>
     </ItemGroup>
 
     <ItemGroup>
