--- a/CatCommander/CatCommander.csproj
+++ b/CatCommander/CatCommander.csproj
@@ -9,34 +9,35 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.3.7"/>
-        <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.1.1"/>
-        <PackageReference Include="Avalonia.Desktop" Version="11.3.7"/>
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.7"/>
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.7"/>
+        <PackageReference Include="Avalonia" Version="11.3.7" />
+        <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.1.1" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.3.7" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.7" />
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.7" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Include="Avalonia.Diagnostics" Version="11.3.7">
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.10"/>
-        <PackageReference Include="Semi.Avalonia" Version="11.3.7"/>
-        <PackageReference Include="Semi.Avalonia.AvaloniaEdit" Version="11.2.0.1"/>
-        <PackageReference Include="Semi.Avalonia.ColorPicker" Version="11.3.7"/>
-        <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.3.7"/>
-        <PackageReference Include="Semi.Avalonia.Dock" Version="11.3.6.2"/>
-        <PackageReference Include="Semi.Avalonia.TreeDataGrid" Version="11.0.10.4"/>
-        <PackageReference Include="NLog" Version="6.0.5"/>
-        <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5"/>
-        <PackageReference Include="ReactiveUI" Version="22.1.1"/>
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.7"/>
-        <PackageReference Include="System.Drawing.Common" Version="9.0.0"/>
-        <PackageReference Include="Tomlyn" Version="0.19.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.10" />
+        <PackageReference Include="Semi.Avalonia" Version="11.3.7" />
+        <PackageReference Include="Semi.Avalonia.AvaloniaEdit" Version="11.2.0.1" />
+        <PackageReference Include="Semi.Avalonia.ColorPicker" Version="11.3.7" />
+        <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.3.7" />
+        <PackageReference Include="Semi.Avalonia.Dock" Version="11.3.6.2" />
+        <PackageReference Include="Semi.Avalonia.TreeDataGrid" Version="11.0.10.4" />
+        <PackageReference Include="NLog" Version="6.0.5" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5" />
+        <PackageReference Include="ReactiveUI" Version="22.1.1" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.7" />
+        <PackageReference Include="SharpHook" Version="7.0.3" />
+        <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
+        <PackageReference Include="Tomlyn" Version="0.19.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <AvaloniaResource Include="Images\*.png"/>
-        <AvaloniaResource Include="Assets\*.png"/>
+        <AvaloniaResource Include="Images\*.png" />
+        <AvaloniaResource Include="Assets\*.png" />
     </ItemGroup>
 
     <ItemGroup>
